--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,30 @@
 {
-  "extends": "next/core-web-vitals"
+	"env": {
+		"node": true
+	},
+	"extends": ["next/core-web-vitals", "eslint:recommended"],
+	"plugins": ["import"],
+	"settings": {
+		"import/resolver": {
+			"node": {
+				"extensions": [".js", ".jsx", ".ts", ".tsx"],
+				"moduleDirectory": ["node_modules", "src/"]
+			}
+		}
+	},
+  "rules": {
+		"import/order": [
+			"warn",
+			{
+				"groups": [["builtin", "external"], "internal", "parent", ["sibling", "index"], "object"],
+				"newlines-between": "always",
+				"alphabetize": {
+					"order": "asc",
+					"caseInsensitive": true
+				}
+			}
+		],
+		"complexity": "warn",
+		"no-console": ["error"]
+	}
 }
