--- a/package.json
+++ b/package.json
@@ -1,37 +1,44 @@
 {
-  "name": "nextjs-mentoring",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install",
-    "pre-commit": "lint-staged"
-  },
-  "dependencies": {
-    "next": "13.4.9",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "zustand": "^4.3.9"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^17.6.6",
-    "@commitlint/config-conventional": "^17.6.6",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.45.0",
-    "eslint-config-next": "^13.4.10",
-    "eslint-plugin-import": "^2.27.5",
-    "husky": "^8.0.0",
-    "lint-staged": "^13.2.3",
-    "postcss": "^8.4.26",
-    "prettier": "^3.0.0",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "^3.3.3"
-  },
-  "lint-staged": {
-    "*.js": "eslint --cache --fix",
-    "*.{js,css,md}": "prettier --write"
-  }
+    "name": "nextjs-mentoring",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "prepare": "husky install",
+        "pre-commit": "lint-staged"
+    },
+    "dependencies": {
+        "@radix-ui/react-slot": "^1.0.2",
+        "@supabase/supabase-js": "^2.27.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.0.0",
+        "lucide-react": "^0.263.0",
+        "next": "^13.4.12",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "tailwindcss-animate": "^1.0.6",
+        "zustand": "^4.3.9"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^17.6.6",
+        "@commitlint/config-conventional": "^17.6.6",
+        "autoprefixer": "^10.4.14",
+        "encoding": "^0.1.13",
+        "eslint": "^8.45.0",
+        "eslint-config-next": "^13.4.10",
+        "eslint-plugin-import": "^2.27.5",
+        "husky": "^8.0.0",
+        "lint-staged": "^13.2.3",
+        "postcss": "^8.4.26",
+        "prettier": "^3.0.0",
+        "tailwind-merge": "^1.14.0",
+        "tailwindcss": "^3.3.3"
+    },
+    "lint-staged": {
+        "*.js": "eslint --cache --fix",
+        "*.{js,css,md}": "prettier --write"
+    }
 }
