--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     },
     "dependencies": {
         "@radix-ui/react-slot": "^1.0.2",
+        "@supabase/auth-helpers-nextjs": "^0.7.4",
+        "@supabase/auth-ui-react": "^0.4.2",
+        "@supabase/auth-ui-shared": "^0.1.6",
         "@supabase/supabase-js": "^2.27.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
