--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "next": "^13.4.12",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-error-boundary": "^4.0.11",
+        "react-hook-form": "^7.45.4",
         "react-icons": "^4.10.1",
         "tailwindcss-animate": "^1.0.6",
         "zustand": "^4.3.9"
